--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.21.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1",
     "sass": "^1.80.6",
     "web-vitals": "^2.1.4"
